batch implementation continued

--- a/mvp/src/main/resources/configuration.properties
+++ b/mvp/src/main/resources/configuration.properties
@@ -2,5 +2,7 @@ mvp.defaultToken=S8EOKCffRvEYTO1pIXIo7Q
 mvp.defaultTenant=us-west-sr
 mvp.rateLimitTimeWindow=1
 mvp.rateLimitMsgCount=50
-mvp.batchQueueSize=1000
+mvp.batchQueueSize=50
 mvp.batchCycleTime=15
+mvp.batchWorkers=5
+mvp.sinkPath=src/test/resources/
