--- a/mvp/pom.xml
+++ b/mvp/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.10.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
