Batch with linked blocking queue

--- a/mvp/src/main/resources/configuration.properties
+++ b/mvp/src/main/resources/configuration.properties
@@ -1,8 +1,8 @@
 mvp.defaultToken=S8EOKCffRvEYTO1pIXIo7Q
 mvp.defaultTenant=us-west-sr
-mvp.rateLimitTimeWindow=1
-mvp.rateLimitMsgCount=50
-mvp.batchQueueSize=50
+mvp.rateLimitTimeWindow=5
+mvp.rateLimitMsgCount=50000
+mvp.batchQueueSize=950
 mvp.batchCycleTime=15
-mvp.batchWorkers=5
-mvp.sinkPath=src/test/resources/
+mvp.batchWorkers=4
+mvp.sinkPath=C:\\Users\\niwar\\Documents\\APPD_EventHub\\
